# hypomnema

./: .gitignore  AGENTS.md  README.MD  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: Tests.yml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: Layout.vue  NotFound.vue  index.ts  style.css
docs/en/: architecture.md  index.md  why-hypomnema.md
docs/es/: index.md
docs/fr/: index.md
src/hypomnema/: __init__.py
tests/: conftest.py  pytest.ini  strict_backend.py
tests/api/: test_core.py  test_helpers.py
tests/backend/: test_backend_behavior.py
tests/backends/: test_backend_contract.py  test_namespace.py  test_namespace_handler.py
tests/base/: test_text_properties.py  test_types.py
tests/deserialization/: test_deserialization_core.py
tests/domain/: test_attributes.py  test_nodes_create_inline.py  test_nodes_create_leaf.py  test_nodes_create_structural.py
tests/dumpers/: test_inline_dumpers.py  test_leaf_dumpers.py  test_memory_dumper.py  test_unit_dumper.py  test_unknown_dumpers.py  test_variant_dumper.py
tests/helpers/: test_helpers_core.py
tests/hypothesis/: strategies.py  test_hypothesis_roundtrip.py
tests/loaders/: test_inline_loaders.py  test_memory_loader.py  test_unit_loader.py  test_variant_loader.py
tests/ops/: test_normalize.py  test_text.py  test_transform.py  test_walk.py
tests/policy/: test_policy_behavior.py
tests/roundtrip/: test_roundtrip_core.py  test_roundtrip_inline.py  test_roundtrip_structural.py
tests/serialization/: test_serialization_core.py
tests/xml/: test_utils.py
(+104 files in other folders)
