[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "hypomnema"
version = "0.5.0"
authors = [{ name = "Enzo Agosta", email = "agosta.enzowork@gmail.com" }]
description = "Python library for manipulating, creating and editing tmx files"
readme = { file = "README.MD", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []


[project.urls]
Homepage = "https://github.com/EnzoAgosta/hypomnema"
Issues = "https://github.com/EnzoAgosta/hypomnema/issues"

[project.optional-dependencies]
lxml = ["lxml>=6.0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "hypothesis>=6.150.3",
  "isort>=7.0.0",
  "lxml>=6.0.2",
  "mypy>=1.19.1",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.14.14",
  "types-lxml>=2025.11.25",
]
test = [
  "hypothesis>=6.150.3",
  "lxml>=6.0.2",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
]
